--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cristián Agustín Stolzenbach Barriga</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-
-
-</head>
-<body>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+  </head>
+  <body>
     <style>
-.flex-container {
-  display: flex;
-}
-.flex-item-small {
-  flex: 1;  /* La columna pequeña ocupa 1 fracción del espacio disponible */
-  background-color: rgb(255, 0, 0);
-}
-.flex-item-large {
-  flex: 3;  /* La columna grande ocupa 3 fracciones del espacio disponible */
-  background-color: rgb(0, 253, 0);
-}
-</style>
-<div class="flex-container">
-  <div class="flex-item-small">Columna pequeña</div>
-  <div class="flex-item-large"><img src="" alt="">Columna grande</div>
-</div>
-</body>
+      .flex-container {
+        display: flex;
+      }
+      .flex-item-small {
+        flex: 1; /* La columna pequeña ocupa 1 fracción del espacio disponible */
+        background-color: rgb(255, 0, 0);
+      }
+      .flex-item-large {
+        flex: 3; /* La columna grande ocupa 3 fracciones del espacio disponible */
+        background-color: rgb(0, 253, 0);
+      }
+    </style>
+    <div class="flex-container">
+      <div class="flex-item-small">Columna pequeña</div>
+      <div class="flex-item-large"><img src="" alt="" />Columna grande</div>
+    </div>
+  </body>
 </html>
