--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
     <div class="flex-container">
       <div class="flex-item-small">Columna pequeña</div>
-      <div class="flex-item-large"><img src="" alt="" />Columna grande</div>
+      <div class="flex-item-large"><img src="/assets/img/hand.png" alt="" />Columna grande</div>
     </div>
   </body>
 </html>
