--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
       .flex-item-large {
         flex: 3; /* La columna grande ocupa 3 fracciones del espacio disponible */
         background-color: rgb(0, 253, 0);
+        text-align: center;
       }
     </style>
     <div class="flex-container">
       <div class="flex-item-small">Columna pequeña</div>
-      <div class="flex-item-large"><img src="/assets/img/hand.png" alt="" />Columna grande</div>
+      <div class="flex-item-large">
+        <img src="/assets/img/hand.png" alt="" />
+        <h1>Comienza el Nertworking</h1>
+        <p>Presiona el botón “Nuevo chat” para comenzar a crear nuevas</p>
+        <p>redes de contacto para tu empresa o emprendimiento.</p>
+      </div>
     </div>
   </body>
 </html>
