--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     <div class="flex-container">
       <div class="flex-item-small">Columna pequeña</div>
       <div class="flex-item-large">
-        <img src="/assets/img/hand.png" alt="" />
+        <style>
+            #myImage {
+              width: 300px;  /* Ajusta esto a la mitad del ancho original de tu imagen */
+              object-fit: contain;
+            }
+            </style>
+            <img id="myImage" src="/assets/img/hand.png" alt="" />
         <h1>Comienza el Nertworking</h1>
         <p>Presiona el botón “Nuevo chat” para comenzar a crear nuevas</p>
         <p>redes de contacto para tu empresa o emprendimiento.</p>
