tipo de letras roboto 700

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cristián Agustín Stolzenbach Barriga</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <style>
@@ -25,12 +31,14 @@
       <div class="flex-item-small">Columna pequeña</div>
       <div class="flex-item-large">
         <style>
-            #myImage {
-              width: 300px;  /* Ajusta esto a la mitad del ancho original de tu imagen */
-              object-fit: contain;
-            }
-            </style>
-            <img id="myImage" src="/assets/img/hand.png" alt="" />
+          #myImage {
+            width: 300px; /* Ajusta esto a la mitad del ancho original de tu imagen */
+            object-fit: contain;
+          }
+        </style>
+        <img id="myImage" src="/assets/img/hand.png" alt="" />
+       <!--   font-family: 'Roboto', sans-serif;   -->
+       
         <h1>Comienza el Nertworking</h1>
         <p>Presiona el botón “Nuevo chat” para comenzar a crear nuevas</p>
         <p>redes de contacto para tu empresa o emprendimiento.</p>
