letras y tipos de letras

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cristián Agustín Stolzenbach Barriga</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <!-- tipos de letras -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
+    />
     />
   </head>
   <body>
@@ -23,7 +25,7 @@
       }
       .flex-item-large {
         flex: 3; /* La columna grande ocupa 3 fracciones del espacio disponible */
-        background-color: rgb(0, 253, 0);
+        background-color: #e8ebe4;
         text-align: center;
       }
     </style>
@@ -37,10 +39,13 @@
           }
         </style>
         <img id="myImage" src="/assets/img/hand.png" alt="" />
-       <!--   font-family: 'Roboto', sans-serif;   -->
-       
-        <h1>Comienza el Nertworking</h1>
-        <p>Presiona el botón “Nuevo chat” para comenzar a crear nuevas</p>
+        <!--   font-family: 'Roboto', sans-serif;   -->
+
+        <h1 class="Comienza-el-Nertworking">Comienza el Nertworking</h1>
+        <p class="Presiona">
+          Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
+          nuevas
+        </p>
         <p>redes de contacto para tu empresa o emprendimiento.</p>
       </div>
     </div>
