comentar letras y corregir una semantica mal cerra

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cristián Agustín Stolzenbach Barriga</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
-    <!-- tipos de letras -->
+    <!-- tipos de letras-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
-    />
+    <!--he he he-->
   </head>
   <body>
     <style>
