lista las letrs de columna grande

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
           nuevas
         </p>
-        <p>redes de contacto para tu empresa o emprendimiento.</p>
+        <p class="Presiona">redes de contacto para tu empresa o emprendimiento.</p>
       </div>
     </div>
   </body>
