--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
       }
     </style>
     <div class="flex-container">
-      <div class="flex-item-small">Columna pequeña</div>
+      <div class="flex-item-small">
+        <div style="display: flex; flex-direction: column">
+          <div><img src="/assets/img/maria.jpg" alt=""><p>María</p>activa ahora<p></p></div>
+          <div>Fila 2</div>
+          <div>Fila 3</div>
+          <div>Fila 4</div>
+          <div>Fila 5</div>
+          <div>Fila 6</div>
+          <div>Fila 7</div>
+          <div>Fila 8</div>
+          <div>Fila 9</div>
+          <div>Fila 10</div>
+        </div>
+      </div>
       <div class="flex-item-large">
         <style>
           #myImage {
@@ -48,7 +61,9 @@
           Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
           nuevas
         </p>
-        <p class="Presiona">redes de contacto para tu empresa o emprendimiento.</p>
+        <p class="Presiona">
+          redes de contacto para tu empresa o emprendimiento.
+        </p>
       </div>
     </div>
   </body>
