--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
               <div class="column"><img id="maria" src="/assets/img/maria.jpg" alt=""></div>
               <div class="column"><strong class="lmaria">María</strong><p class="activa">Activa ahora</p></div>
-              <div class="column"><i class="fas fa-bars" style="color: #808080;"></i></div>
+              <div class="column"><p><i class="fa fa-regular fa-bars"></i></p></div>
               
               
             </div></div>
-          <div>Fila 2</div>
+          <div class="button"><button class="nuevo">Nuevo chat</button></div>
           <div>Fila 3</div>
           <div>Fila 4</div>
           <div>Fila 5</div>
