--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <!--alberto-->
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/alberto.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -129,7 +129,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/ignacio.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -141,7 +141,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/cristian.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -153,7 +153,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/maria-jose.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -165,7 +165,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/gonzalo.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -177,7 +177,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/juan-pablo.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
@@ -189,7 +189,7 @@
           <div>
             <div class="container2">
               <div class="column2">
-                <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
+                <img class="fjuanita" src="/assets/img/magdalena.jpg" alt="" />
               </div>
               <div class="column22">
                 <strong class="lmaria">Juanita</strong>
