css activa y activa 1

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="column">
                 <strong class="lmaria">María</strong>
-                <p class="activa">Activa ahora</p>
+                <p class="activa1">Activa ahora</p>
               </div>
               <div class="column">
                 <p><i class="fa fa-regular fa-bars"></i></p>
@@ -86,7 +86,7 @@
                 padding: 20px;
               }
             </style>
-<!--juanita-->
+            <!--juanita-->
             <div class="container2">
               <div class="column2">
                 <img class="fjuanita" src="/assets/img/juanita.jpg" alt="" />
@@ -120,8 +120,8 @@
                 <img class="fjuanita" src="/assets/img/alberto.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">Alberto</strong>
+                <p class="activa">blanditiis praesentium</p>
               </div>
             </div>
           </div>
@@ -132,8 +132,8 @@
                 <img class="fjuanita" src="/assets/img/ignacio.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">Ignacio</strong>
+                <p class="activa">officiis debitis aut</p>
               </div>
             </div>
           </div>
@@ -144,8 +144,8 @@
                 <img class="fjuanita" src="/assets/img/cristian.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">Cristian</strong>
+                <p class="activa">Nam libero tempore</p>
               </div>
             </div>
           </div>
@@ -156,8 +156,8 @@
                 <img class="fjuanita" src="/assets/img/maria-jose.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">María José</strong>
+                <p class="activa">impedit quo minus id</p>
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
                 <img class="fjuanita" src="/assets/img/gonzalo.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
+                <strong class="lmaria">Gonzalo</strong>
                 <p class="activa">At vero eos et accusa</p>
               </div>
             </div>
@@ -180,8 +180,8 @@
                 <img class="fjuanita" src="/assets/img/juan-pablo.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">Juan Pablo</strong>
+                <p class="activa">necessitatibus saepe</p>
               </div>
             </div>
           </div>
@@ -192,8 +192,8 @@
                 <img class="fjuanita" src="/assets/img/magdalena.jpg" alt="" />
               </div>
               <div class="column22">
-                <strong class="lmaria">Juanita</strong>
-                <p class="activa">At vero eos et accusa</p>
+                <strong class="lmaria">Magdalena</strong>
+                <p class="activa">ut et voluptates</p>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
             object-fit: contain;
           }
         </style>
-        <br /><br /><br />
+        <br /><br /><br /><br><br><br><br /><br /><br /><br><br><br>
         <img id="myImage" src="/assets/img/hand.png" alt="" />
         <!--   font-family: 'Roboto', sans-serif;   -->
 
