--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       rel="stylesheet"
     />
     <!--he he he-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!--hehehe otravez-->
   </head>
   <body>
     <style>
@@ -63,8 +65,9 @@
                 <strong class="lmaria">María</strong>
                 <p class="activa1">Activa ahora</p>
               </div>
-              <div class="column">
-                <p><i class="fa fa-regular fa-bars"></i></p>
+              <div class="icono">
+                
+                <i class="fa-regular fa-message fa-xl fa-arrow-left" style="color: #808080;"></i>.........<i class="fa-solid fa-bars fa-xl fa-arrow-right " style="color: #808080;"></i>  
               </div>
             </div>
           </div>
@@ -219,6 +222,8 @@
           redes de contacto para tu empresa o emprendimiento.
         </p>
         <br /><br /><br />
+        <p class="Presiona"><a href="https://github.com/Cristian-Stolzenbach/mensajeria-1"target="_blank">Visita mi trabajo en Github</a>
+        </p>
       </div>
     </div>
   </body>
